2.4.0 (2024-03-19)

Added:
- Support Subscriptions API hosting block for Sentinel Hub (#1023).

2.3.0 (2024-02-09)

Added:
- Support Subscriptions API `PATCH` requests (#1020).
- Add path_prefix to Subscriptions API request builder (#1018).

Fixed:
- Fixed datetime serialization bug (#1016).

2.2.0 (2023-10-16)

Added:
- Support for forest_carbon_diligence_30m data layer in Subscriptions API (#1012).
- Support for cloud_filter tool in Subscriptions API (#1014).

2.1.1 (2023-07-20)

Changed:
- Version 2.1.0 was not compatible with Python 3.7 because of an import of
  typing.Literal. It is now imported exclusively from typing_extensions and
  Python 3.7, while EOL, will be supported for a while longer (#).
- The upper version pin for click has been removed. This project ignores type
  errors involving click.command() and click.group() since 2.1.0 and does not
  need to avoid click 8.1.4 or 8.1.5.

2.1.0 (2023-07-17)

Added:
- Support for publishing stages and time range types has been added to the
  subscriptions CLI (#992).
- The --cloudconfig option of the request command of the orders CLI has been
  superseded by a new --delivery option, with --cloudconfig left as an alias.
  New --archive-type, --archive-filename, and --single-archive options to
  control the zip archiving of order outputs without any cloud storage delivery
  have also been added (#990).


2.1b1 (2023-07-11)

Added:
- The request command of the subscriptions CLI has a new --clip-to-source
  option (#988).
- A new request-pv command has been added to the subscriptions CLi (#988).
- Support for catalog source publishing stages (#977) and time range types
  (#978) have been added to subscription_request.catalog_source.
- Add the option to get Planetary Variable subscription results as a CSV file
  (#981).
- A subscription_request.planetary_variable_source function has been added
  (#976).
- The subscription_request.build_request function has a new option to clip to