@@ -276,7 +276,8 @@ def planetary_variable_source(
                       "land_surface_temperature",
                       "soil_water_content",
                       "vegetation_optical_depth",
-                      "forest_carbon_diligence_30m"],
+                      "forest_carbon_diligence_30m",
+                      "field_boundaries_sentinel_2_p1m"],
     var_id: str,
     geometry: Mapping,
     start_time: datetime,
@@ -296,8 +297,8 @@ def planetary_variable_source(
 
     Parameters:
         var_type: one of "biomass_proxy", "land_surface_temperature",
-            "soil_water_content", "vegetation_optical_depth", or
-            "forest_carbon_diligence_30m".
+            "soil_water_content", "vegetation_optical_depth",
+            "forest_carbon_diligence_30m, or field_boundaries_sentinel_2_p1m".
         var_id: a value such as "SWC-AMSR2-C_V1.0_100" for soil water
             content derived from AMSR2 C band.
         geometry: The area of interest of the subscription that will be
