@@ -1,3 +1,8 @@
+
+
+Added:
+ - Support for field_boundaries_sentinel_2_p1m in Subscriptions API (#1026)
+
 2.4.0 (2024-03-19)
 
 Added:
